--- a/window.glade
+++ b/window.glade
@@ -175,6 +175,8 @@
                       <object class="GtkGrid" id="metadata_grid">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="row_spacing">5</property>
+                        <property name="column_spacing">5</property>
                         <child>
                           <placeholder/>
                         </child>
