--- a/window.glade
+++ b/window.glade
@@ -16,9 +16,10 @@
   </object>
   <object class="GtkWindow" id="window1">
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">ID3 Discover</property>
+    <property name="title" translatable="yes">Metadata Modifier</property>
     <property name="default_width">600</property>
     <property name="default_height">400</property>
+    <property name="icon_name">applications-multimedia</property>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
